--- a/projects/p2_cryptostar_dapp_eth/app/src/index.html
+++ b/projects/p2_cryptostar_dapp_eth/app/src/index.html
@@ -30,6 +30,8 @@
       <br>
       <span id="status"></span>
       <br>
+      <span id="lookresult"></span>
+      <br>
     <script src="index.js"></script>
   </body>
 </html>
